@@ -22,12 +22,7 @@ if test $krb5_cv_pragma_weak = yes; then
 AC_DEFINE(HAVE_PRAGMA_WEAK)
 fi
 dnl
-V5_SHARED_LIB_OBJS
-SubdirLibraryRule([${OBJS}])
-CRYPTO_SH_VERS=$krb5_cv_shlib_version_libcrypto
-AC_SUBST(CRYPTO_SH_VERS)
-KRB5_SH_VERS=$krb5_cv_shlib_version_libkrb5
-AC_SUBST(KRB5_SH_VERS)
 KRB5_RUN_FLAGS
-V5_MAKE_SHARED_LIB(libdes425,1.0,.., ./des425)
+KRB5_BUILD_LIBOBJS
+KRB5_BUILD_LIBRARY_WITH_DEPS
 V5_AC_OUTPUT_MAKEFILE
