@@ -1,3 +1,7 @@
+Mon Jan  6 07:47:56 1997  Ezra Peisach  <epeisach@mit.edu>
+
+	* configure.in, Makefile.in: Update to new library building procedure.
+
 Mon Nov 18 20:39:02 1996  Ezra Peisach  <epeisach@mit.edu>
 
 	* configure.in: Set shared library version to 1.0. [krb5-libs/201]
